# flutter_libgit2

./: .gitignore  .gitmodules  AndroidManifest.xml  Makefile  README.md
android/app/: build.gradle
android/app/src/main/kotlin/com/example/libgit2/: MainActivity.kt
libs/: CMakeLists.txt  api.cpp
libs/bitesize/: common.h  rand.c
